objects/GeWS_Security_Credential__c.object
<CustomObject>
    <description>Ge - General
WS - Web Service Framework

Used to store credentials for accessing external Service</description>
    <fields>
        <fullName>GeWS_API_Key_Location__c</fullName>
        <description>Determines where the API key will be included in any calls</description>
        <label>API Key Location</label>
        <picklist>
            <controllingField>GeWS_Credential_Type__c</controllingField>
            <picklistValues>
                <fullName>Header</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Parameter On URI</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GeWS_API_Key__c</fullName>
        <description>Ge - General
WS - Web Service Framework
The API key used when calling the external service</description>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeWS_API_Secret__c</fullName>
        <description>Ge - General
WS - Web Service Framework
The API secret used when calling the external service</description>
        <encrypted>true</encrypted>
        <label>API Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeWS_API_key_Variable_to_use__c</fullName>
        <label>API key Variable to use</label>
        <picklist>
            <controllingField>GeWS_Credential_Type__c</controllingField>
            <picklistValues>
                <fullName>key</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>X-FullContact-APIKey</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GeWS_Authentication_Endpoint__c</fullName>
        <description>Ge - General
WS - Web Service Framework
Stores the endpoint used in authentication</description>
        <inlineHelpText>Only used if the Authentication endpoint is different to the endpoint of the service that will be used</inlineHelpText>
        <label>Authentication Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GeWS_Certificate_Name__c</fullName>
        <description>Ge - General
WS - Web Service Framework
 The name of the certificate that should be used as part of the authentication</description>
        <label>Certificate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeWS_Credential_Identifier__c</fullName>
        <description>Ge - General
WS - Web Service Framework
 a unique string to identify the system / credential</description>
        <externalId>true</externalId>
        <inlineHelpText>Used by the Custom Setting to identify a Security Credential</inlineHelpText>
        <label>Credential Identifier</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GeWS_Credential_Type__c</fullName>
        <description>Ge - General
WS - Web Service Framework
 Describes the type of Credential, this will determine how the values are used within the API Callouts</description>
        <label>Credential Type</label>
        <picklist>
            <picklistValues>
                <fullName>Basic Auth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OAuth 1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OAuth 1.0a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OAuth 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API Key Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ocp-Apim-Subscription-Key</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GeWS_EnterpriseUniqueIdSeq__c</fullName>
        <description>Ge - General
WS - Web Service Framework
 A sequence number used to generate a Unique ID if an Id has not been provided</description>
        <displayFormat>SecCred-{00000}</displayFormat>
        <label>Enterprise Unique Id Seq</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>GeWS_EnterpriseUniqueId__c</fullName>
        <description>Ge - General
WS - Web Service Framework
An Enterprise Unique ID that can be used to move this object between environments</description>
        <externalId>true</externalId>
        <inlineHelpText>Used when Loading Security Credentials  between environments</inlineHelpText>
        <label>Enterprise Unique Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GeWS_Grant_Type__c</fullName>
        <description>Ge - General
WS - Web Service Framework
Grant Type</description>
        <label>Grant Type</label>
        <picklist>
            <controllingField>GeWS_Credential_Type__c</controllingField>
            <picklistValues>
                <fullName>password</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>authorization_code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>client_credentials</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GeWS_Password__c</fullName>
        <description>M
            Ge - General
WS - Web Service Framework
Stores an encrypted version of the password</description>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>GeWS_User_Agent__c</fullName>
        <description>Ge - General
WS - Web Service Framework
Holds the User Agent that is passed across the interface</description>
        <inlineHelpText>This is used to set the application should the authentication URL be different to the URL in the Custom Setting</inlineHelpText>
        <label>User Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeWS_Username__c</fullName>
        <description>Ge - General
WS - Web Service Framework
Stores the username for the security credential.</description>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Security Credential</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>GeWS_Security Credential Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Security Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Must_Populate_User_Agent</fullName>
        <active>true</active>
        <description>Must be populated if the Authentication endpoint is populated</description>
        <errorConditionFormula>NOT(ISBLANK(GeWS_Authentication_Endpoint__c))</errorConditionFormula>
        <errorDisplayField>GeWS_User_Agent__c</errorDisplayField>
        <errorMessage>Please populate the User Agent if a new Application Endpoint is populated</errorMessage>
    </validationRules>
</CustomObject>